# vl-jepa

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  project_brief.md  pyproject.toml  render.yaml  requirements-lock.txt  sitemap.xml
.claude/: CLAUDE.md  FIX-001_DEPLOYMENT_SUMMARY.md  GATE_10_COMPLETE.md  GATE_12_COMPLETE.md  GATE_12_UNLOCKED.md  GATE_13_COMPLETE.md  GATE_14_COMPLETE.md  GATE_15_COMPLETE.md  GATE_16_COMPLETE.md  GATE_17.1_COMPLETE.md  GATE_17.2_COMPLETE.md  GATE_17.3_COMPLETE.md  GATE_17.4_COMPLETE.md  GATE_17.5_COMPLETE.md  GATE_17_COMPLETE.md  GATE_17_PLANNING_APPROVED.md  GATE_18.1_COMPLETE.md  GATE_18.2_COMPLETE.md  GATE_18_COMPLETE.md  GATE_18_PLANNING_APPROVED.md  GATE_19_DAY2_COMPLETE.md  GATE_2_COMPLETE.md  GATE_9_COMPLETE.md  GATE_W20_COMPLETE.md  GATE_W20_PLANNING_COMPLETE.md  GATE_W21_COMPLETE.md  GATE_W21_PLANNING_APPROVED.md  GATE_W22_COMPLETE.md  GATE_W22_PLANNING_COMPLETE.md  GATE_W25_COMPLETE.md  GATE_W26_COMPLETE.md  GATE_W27_COMPLETE.md  GATE_W28_COMPLETE.md  GATE_W29_PLANNING_COMPLETE.md  GATE_W31_PLANNING_COMPLETE.md  GATE_WEEK8_COMPLETE.md  HOSTILE_GATE_CHECKLIST.md  PROMPT_MAKER_HOSTILE_REVIEW.md  PROMPT_MAKER_TESTING.md  RELEASE_CHECKLIST.md  (+8 more)
.claude/agents/: benchmark-scientist.md  docwriter.md  meta-architect.md  prompt-maker.md  rust-engineer.md  test-engineer.md  wasm-specialist.md
.claude/commands/: CMD_TEST_ENGINEER.md  architect-design.md  bench-baseline.md  bench-compare.md  dispatch.md  doc-api.md  doc-readme.md  init.md  planner-roadmap.md  planner-weekly.md  review.md  rust-implement.md  test-fuzz.md  test-prop.md  wasm-bind.md
.claude/gates/: GATE_0_COMPLETE.md  GATE_1_COMPLETE.md  GATE_2_COMPLETE.md
.claude/hooks/: code-quality-check.sh  pre-commit-review.sh
.github/workflows/: ci.yml  docs.yml
ADR/ADR-0001-indexeddb-storage/: index.html
ARCHITECTURE/: index.html
ARCHITECTURE/AUDIO_VISUAL_SYNC/: index.html
BENCHMARKS/: index.html
CONTRIBUTING/: index.html
DECISIONS/: index.html
DOCKER/: index.html
FRAMEWORK_QUICKSTART/: index.html
QUALITY_GATES/: index.html
ROADMAP/: index.html
SPECIFICATION/: index.html
TEST_STRATEGY/: index.html
architecture/API_DESIGN/: index.html
architecture/ARCHITECTURE/: index.html
architecture/DATA_FLOW/: index.html
assets/DEMO_INSTRUCTIONS/: index.html
cloud-demo/: index.html
docs/: DOCKER.md  ROADMAP.md  cloud-demo.md  index.md  local-setup.md  quickstart.md
docs/ADR/: ADR-0001-indexeddb-storage.md
docs/assets/: DEMO_INSTRUCTIONS.md
docs/guide/: api.md  web-ui.md
docs/planning/: DAILY_LOG.md  WEEK10_DESIGN_PLAN.md  WEEK10_PLAN.md  WEEK10_STORAGE_PLAN.md  (+2 more)
local-setup/: index.html
quickstart/: index.html
scripts/: setup-branch-protection.sh
search/: search_index.json
tests/: conftest.py
(+152 files in other folders)
