[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vl-jepa"
version = "0.1.0"
description = "Event-aware lecture summarizer using V-JEPA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matteo Panzeri" }
]
keywords = ["video", "jepa", "summarizer", "embeddings", "lecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.80.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
ml = [
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
    "faiss-cpu>=1.7.4",
]
ui = [
    "gradio>=4.0.0",
]
all = [
    "vl-jepa[dev,ml,ui]",
]

[project.scripts]
vl-jepa = "vl_jepa.cli:main"

[project.urls]
Homepage = "https://github.com/username/vl-jepa"
Repository = "https://github.com/username/vl-jepa"

[tool.hatch.build.targets.wheel]
packages = ["src/vl_jepa"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["vl_jepa"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "faiss.*",
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "gradio.*",
    "safetensors.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "benchmark: Performance benchmark tests",
    "slow: Slow tests",
    "gpu: Tests requiring GPU",
    "network: Tests requiring network",
]

[tool.coverage.run]
source = ["src/vl_jepa"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
